# RobotChallenge

./: .gitignore  2023-07-08-21-45-34.bag  2023-07-26-17-32-44.bag  README.md  error.txt  launch.sh  record.sh
Analysis_script/: controlYaw.py  controlacc.py  test.py
shellFiles/: debug_record.sh  launch.sh  record.sh  t265与px4偏航角实验1.bag  t265与px4偏航角实验2.bag  t265与px4偏航角实验3.bag  t265与px4偏航角实验4.bag  takeoff.sh
src/line_preception/: CMakeLists.txt  package.xml
src/line_preception/include/line_preception/: line_preception.hpp
src/line_preception/src/: line_preception_node.cpp
src/location/odom_fusion/: CMakeLists.txt  package.xml
src/location/odom_fusion/include/odom_fusion/: odom_fusion.h
src/location/odom_fusion/launch/: odom_fusion.launch
src/location/odom_fusion/src/: odom_fusion.cpp  odom_fusion_node.cpp
src/minimumsnap/: CMakeLists.txt  package.xml
src/minimumsnap/include/minimumsnap/: trajectory_generator.hpp
src/minimumsnap/launch/: fly.launch  rviz.launch  visual.rviz
src/minimumsnap/src/: control_cmd.cpp  control_cmd_FSM.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: run_ctrl.launch
src/px4ctrl/src/: PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  controller.h  px4ctrl_node.cpp
src/visual_utils/: CMakeLists.txt  package.xml
src/visual_utils/include/visual_utils/: planning_visualization.hpp
src/visual_utils/src/: planning_visualization.cpp
